gst/gdp/gstgdppay.c
@@ -577,6 +577,8 @@ gst_gdp_pay_sink_event (GstPad * pad, GstObject * parent, GstEvent * event)
     flowret = gst_gdp_queue_buffer (this, outbuffer);
     if (flowret != GST_FLOW_OK)
       goto push_error;
+  } else {
+    gst_buffer_unref (outbuffer);
   }
 
 done:
